# django-audio-validator

./: .coverage  .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg
docs/: environment.yaml  requirements.txt
docs/source/: conf.py  functions.rst  index.rst
src/audio_validator/: .coverage  .coveragerc  validator.py
src/audio_validator/tests/: test_audio_validator.py
src/django_audio_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
