[metadata]
name = django-audio-validator
version = 0.0.1
author = Reza Shakeri
author_email = rzashakeri@outlook.com
description = a packages for validate audio file in django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rzashakeri/django-audio-validator
project_urls =
    Bug Tracker = https://github.com/rzashakeri/django-audio-validator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    filetype

[options.packages.find]
where = src